minor fixes, plus untracking .idea