@@ -77,7 +77,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <jvmArguments>--enable-native-access=tomcat.embed.core</jvmArguments>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
@@ -86,14 +85,12 @@
                     </excludes>
                 </configuration>
             </plugin>
-            <!-- This plugin runs your tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version> <!-- It's good practice to specify a version -->
+                <version>3.2.5</version>
                 <configuration>
-                    <!-- Apply the same targeted JVM argument for the test execution -->
-                    <argLine>--enable-native-access=tomcat.embed.core</argLine>
+                    <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                 </configuration>
             </plugin>
         </plugins>
